refactor: 코드리뷰 적용
- stream 메소드 체이닝 줄 바꿈
- 예외 설명 추가
- 원시값 wrapping 클래스 추가
  - CarName, CarPosition
  - 원시값 일급 컬렉션 CarNames 추가
- 주생성자 활용